[package]
name = "sagittarius-os"
version = "0.1.0"
authors = ["ffrxst"]
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.7"
spin = "0.5.2"
x86_64 = "0.15.4"
pic8259 = "0.11.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]

[[test]]
name = "stack_overflow"
harness = false